syntax = "proto3";

package models;

option go_package = "github.com/fiveret/product-service/grpc/models; models";

message ItemResponse{
    uint32 product_id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    string category = 5;
    string currency = 6;
    uint32 inStock = 7;
    string status = 8;
}


message ItemRequest{
    string name = 1;
    string description = 2;
    double price = 3;
    string category = 4;
    string currency = 5;
    uint32 inStock = 6;
    string status = 7;
}